# unified-drone-ai-framework

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md
examples/: hover_pid.py  inspect_mission.py
tests/integration/: test_sim_bridge.py
tests/unit/: test_adapters.py  test_control_controller.py  test_mission_orchestrator.py  test_planning_coverage.py  test_simulation_backend.py
unified/: __init__.py
unified/adapters/: action_adapter.py  state_adapter.py
unified/control/: __init__.py  controller.py
unified/mission/: __init__.py  orchestrator.py
unified/planning/: __init__.py  coverage.py
unified/simulation/: __init__.py  backend.py
